--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,11 +6,13 @@
 #    By: lbarbosa <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/10/21 18:16:01 by lbarbosa          #+#    #+#              #
-#    Updated: 2022/02/18 20:57:41 by lbarbosa         ###   ########.fr        #
+#    Updated: 2022/02/23 18:54:36 by lbarbosa         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
+
+HEADER = libft.h
 
 C_SRC = ft_putbase.c ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
 
@@ -28,6 +30,9 @@ all: $(NAME)
 
 $(NAME): $(SRC_OBJ)
 	@ar rcs $(NAME) $(SRC_OBJ)
+
+.o.c:
+	@$(CC) $(C_FLAGS) -I $(HEADER) -o $@ -c $<
 
 bonus: $(NAME) $(SRC_OBJ) $(BONUS_OBJ)
 	@ar rcs $(NAME) $(SRC_OBJ) $(BONUS_OBJ)
